--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,6 @@ __pycache__/entry.cpython-313.pyc
 tester.py
 fatura.pdf
 fatura.txt
+__pycache__/entry.cpython-313.pyc
+__pycache__/entry.cpython-313.pyc
+tester.py
